2004-08-29  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/system.cc (get_line): add System stencil to exprs. Fixes
	system-extents.ly.

	* ly/engraver-init.ly: decrease minimumVerticalExtent to (-5,5).

	* scm/define-grobs.scm (all-grob-descriptions): decrease padding
	for MultiMeasureRestNumber

	* VERSION (PACKAGE_NAME): release 2.3.13

2004-08-29  Nicolas Sceaux  <nicolas.sceaux@free.fr>

	* lily/context-scheme.cc (LY_DEFINE): ly:context-grob-definition
	takes two arguments.

2004-08-29  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* input/regression/slur-stem-broken.ly: remove.

	* lily/slur.cc: add quant-score.

	* input/regression/slur-staccato.ly (texidoc): remove

	* make/lilypond.redhat.spec.in (Group): remove musedata2ly

2004-08-28  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/include/bezier-bow.hh: remove.

	* lily/slur-bezier-bow.cc (Module): remove.

	* lily/include/slur.hh (Module): remove.

	* lily/slur.cc: remove

	* input/test/slur-beautiful.ly (Module): remove

	* input/test/slur-attachment-override.ly (Module): remove

	* lily/slur-quanting.cc (after_line_breaking): only do scoring
	when less than 4 control-points.

	* lily/key-signature-interface.cc: add style.

	* Documentation/user/notation.itely (Automatic staff changes):
	document new behavior.

	* input/regression/slur-extreme.ly: new file.

	* ly/engraver-init.ly (Score): set bassStaffProperties to \clef
	bass. Obviates \clef bass in the bass staff, when using \autochange 

	* lily/auto-change-iterator.cc (construct_children): instantiate
	up/down Staff, create Voice on up staff initially. Obviates
	explicit instantiation of up/down contexts for \autochange. 

	* lily/slur-quanting.cc (get_bezier): new functionality, blow up
	slur depending on extents of note heads.
	
2004-08-28  Graham Percival  <gperlist@shaw.ca>

	* Documentation/user/tutorial.itely: minor editing.

	* Documentation/user/examples.itely: tiny editing.

2004-08-28  Han-Wen Nienhuys   <hanwen@xs4all.nl>
