@@ -1,3 +1,8 @@
+2004-09-01  Han-Wen Nienhuys   <hanwen@xs4all.nl>
+
+	* lily/include/simple-spacer.hh (struct Simple_spacer): remove
+	expand_only option.
+
 2004-08-29  Han-Wen Nienhuys   <hanwen@xs4all.nl>
 
 	* lily/system.cc (get_line): add System stencil to exprs. Fixes
